last adjustments on section profile

--- a/index.html
+++ b/index.html
@@ -32,12 +32,8 @@
 
                         <div class="about__text">
                             <h3 class="terciary-heading u-margin-bottom-small">About Me</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>Self-motivated and Self-disciplined Front-End Web Developer. My background as a WordPress Developer, along with my education in Front-End Web Developer, has allowed me to attain a strong foundation of technical skills required to help you. In addition to my Web Development skills, I also possess a great eye for design, and this is what I believe separates me from the rest of the competition.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -46,13 +42,13 @@
                     <div class="details">
                         <h3 class="terciary-heading u-margin-bottom-xsmall">My Details</h3>
 
-                        <div class="details__items">
+<!--                         <div class="details__items">
                             <span class="details__items--icon fa-stack fa-2x">
                                 <i class="fas fa-square fa-stack-2x"></i>
                                 <i class="fas fa-user fa-stack-1x fa-inverse"></i>
                             </span>
                             <span class="details__items--text details__items--text-medium">34 years old</span>
-                        </div>
+                        </div> -->
 
                         <div class="details__items">
                             <span class="details__items--icon fa-stack fa-2x">
