--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </div>
     </header>
     <main>
-        <section class="section-profile">
-            <div class="u-center-text u-margin-top-big u-margin-bottom-big">
-                    <h2 class="secondary-heading">
-                        Profile
-                    </h2>
+
+        <!-- Section Profile -->
+        <section class="section-profile u-padding-bottom-big">
+            <div class="u-center-text ">
+                    <h2 class="secondary-heading secondary-heading--blue u-margin-top-big u-margin-bottom-big"> Profile </h2>
             </div>
             <div class="row">
                 <div class="col-2-of-3">
@@ -31,7 +31,7 @@
                         </figure>
 
                         <div class="about__text">
-                            <h3 class="terciary-heading u-margin-bottom-small">About Me</h3>
+                            <h3 class="terciary-heading terciary-heading--blue u-margin-bottom-small">About Me</h3>
                             <p>Self-motivated and Self-disciplined Front-End Web Developer. My background as a WordPress Developer, along with my education in Front-End Web Developer, has allowed me to attain a strong foundation of technical skills required to help you. In addition to my Web Development skills, I also possess a great eye for design, and this is what I believe separates me from the rest of the competition.
                             </p>
                         </div>
@@ -40,7 +40,7 @@
 
                 <div class="col-1-of-3">
                     <div class="details">
-                        <h3 class="terciary-heading u-margin-bottom-xsmall">My Details</h3>
+                        <h3 class="terciary-heading terciary-heading--blue u-margin-bottom-xsmall">My Details</h3>
 
 <!--                         <div class="details__items">
                             <span class="details__items--icon fa-stack fa-2x">
@@ -113,7 +113,32 @@
                         </div> -->
 
                     </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- Section Experience -->
+        <section class="section-experience u-padding-bottom-big">
+
+            <div class="u-center-text">
+                <h2 class="secondary-heading secondary-heading--white u-margin-top-big u-margin-bottom-big">Skills</h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2 u-center-text">
+                    <h3 class="terciary-heading terciary-heading--white">Professional Skills</h3>
+                    <ul class="pro-skills__list">
+                        <li class="pro-skills__item">WordPress<span class="pro-skills__rating"></span></li>
+                        <li class="pro-skills__item">HTML<span class="pro-skills__rating"></span></li>
+                        <li class="pro-skills__item">CSS<span class="pro-skills__rating"></span></li>
+                        <li class="pro-skills__item">Bootstrap<span class="pro-skills__rating"></span></li>
+                        <li class="pro-skills__item">Sass<span class="pro-skills__rating"></span></li>
+                        <li class="pro-skills__item">JavaScript<span class="pro-skills__rating"></span></li>
+                        <li class="pro-skills__item">JQuery<span class="pro-skills__rating"></span></li>
+                    </ul>
+                </div>
+                <div class="col-1-of-2 u-center-text">
+                    <h3 class="terciary-heading terciary-heading--white">Personal Skills</h3>
                 </div>
             </div>
         </section>
