--- a/index.html
+++ b/index.html
@@ -127,21 +127,31 @@
             <div class="row">
                 <div class="col-1-of-2 u-center-text">
                     <h3 class="terciary-heading terciary-heading--white">Professional Skills</h3>
-                    <ul class="pro-skills__list">
-                        <li class="pro-skills__item">WordPress<span class="pro-skills__rating"></span></li>
-                        <li class="pro-skills__item">HTML<span class="pro-skills__rating"></span></li>
-                        <li class="pro-skills__item">CSS<span class="pro-skills__rating"></span></li>
-                        <li class="pro-skills__item">Bootstrap<span class="pro-skills__rating"></span></li>
-                        <li class="pro-skills__item">Sass<span class="pro-skills__rating"></span></li>
-                        <li class="pro-skills__item">JavaScript<span class="pro-skills__rating"></span></li>
-                        <li class="pro-skills__item">JQuery<span class="pro-skills__rating"></span></li>
+                    <ul class="skills__list">
+                        <li class="skills__item">WordPress<span class="skills__rating-8"></span></li>
+                        <li class="skills__item">HTML<span class="skills__rating-9"></span></li>
+                        <li class="skills__item">CSS / Sass<span class="skills__rating-9"></span></li>
+                        <li class="skills__item">JavaScript / JQuery<span class="skills__rating-7"></span></li>
+                        <li class="skills__item">PHP<span class="skills__rating-5"></span></li>
+                        <li class="skills__item">Bootstrap<span class="skills__rating-8"></span></li>
+                        <li class="skills__item">UI / UX Design<span class="skills__rating-8"></span></li>
                     </ul>
                 </div>
                 <div class="col-1-of-2 u-center-text">
                     <h3 class="terciary-heading terciary-heading--white">Personal Skills</h3>
+                    <ul class="skills__list">
+                        <li class="skills__item">Self-Motivated<span class="skills__rating-10"></span></li>
+                        <li class="skills__item">Self-Disciplined<span class="skills__rating-9"></span></li>
+                        <li class="skills__item">Teamwork<span class="skills__rating-9"></span></li>
+                        <li class="skills__item">Communication<span class="skills__rating-9"></span></li>
+                        <li class="skills__item">Work Ethic<span class="skills__rating-10"></span></li>
+                        <li class="skills__item">Judgment<span class="skills__rating-9"></span></li>
+                        <li class="skills__item">Attitude<span class="skills__rating-9"></span></li>
+                    </ul>
                 </div>
             </div>
         </section>
     </main>
 </body>
 </html>
+
