--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="u-center-text ">
                 <h2 class="secondary-heading secondary-heading--blue u-margin-top-big u-margin-bottom-big"> Profile </h2>
             </div>
-            <div class="row">
+            <main class="row">
                 <div class="col-2-of-3">
                     <div class="about">
                         <figure class="about__image">
@@ -97,7 +97,7 @@
                                 <i class="fas fa-square fa-stack-2x"></i>
                                 <i class="fas fa-comment fa-stack-1x fa-inverse"></i>
                             </span>
-                            <span class="details__items--text">Portuguese, English, Spanish</span>
+                            <span class="details__items--text">English, Spanish, Portuguese</span>
                         </div>
 
 
@@ -121,7 +121,7 @@
 
                     </div>
                 </div>
-            </div>
+            </main>
         </section>
 
         <!-- Section Skills -->
@@ -131,7 +131,7 @@
                 <h2 class="secondary-heading secondary-heading--white u-margin-top-big u-margin-bottom-big">Skills</h2>
             </div>
 
-            <div class="row">
+            <main class="row">
                 <div class="col-1-of-2 u-center-text">
                     <h3 class="terciary-heading terciary-heading--white">Professional Skills</h3>
                     <ul class="skills__list">
@@ -171,18 +171,18 @@
                         <li class="skills__item">jQuery
                             <span class="skills__rating-8"></span>
                         </li>
-                        <li class="skills__item">Visual Studio Code
-                            <span class="skills__rating-9"></span>
-                        </li>
-                        <li class="skills__item">Bootstrap
+                        <li class="skills__item">Photoshop
                             <span class="skills__rating-8"></span>
+                        </li>
+                        <li class="skills__item">NPM
+                            <span class="skills__rating-7"></span>
                         </li>
                         <!-- <li class="skills__item">Attitude
                             <span class="skills__rating-9"></span>
                         </li> -->
                     </ul>
                 </div>
-            </div>
+            </main>
         </section>
 
         <!--Section Education -->
@@ -192,13 +192,12 @@
                 <h2 class="secondary-heading secondary-heading--blue u-margin-top-big u-margin-bottom-big"> Education </h2>
             </div>
 
-            <div class="education">
+            <main class="education">
                 <div class="education__group">
                     <time class="education__date">2017</time>
                     <h3 class="terciary-heading terciary-heading--blue u-margin-bottom-xsmall education__type">Front-End Web Development Nanodegree</h3>
-                    <p class="education__school">Udacity.com
-                        <small>(online)</small>
-                    </p>
+                    <a href="https://www.udacity.com" target="_blank" class="education__school">Udacity.com</a>
+
                 </div>
 
                 <div class="education__group">
@@ -208,9 +207,128 @@
                         <small>(London)</small>
                     </p>
                 </div>
-
-
+            </main>
+        </section>
+        <section class="section-courses u-padding-bottom-big">
+            <div class="u-center-text ">
+                <h2 class="secondary-heading secondary-heading--white u-margin-top-big u-margin-bottom-big"> Other Courses </h2>
             </div>
+
+            <main class="courses">
+                <div class="courses__group">
+                    <time class="courses__date">Feb 2018 - Ongoing</time>
+                    <h3 class="terciary-heading terciary-heading--white u-margin-bottom-xsmall courses__type">WordPress Development
+                        <!-- <small>by Zac Gordon</small> -->
+                    </h3>
+                    <a href="https://www.udemy.com/wordpress-theme-and-plugin-development-course/" target="_blank" class="courses__school">Udemy.com</a>
+
+                </div>
+
+                <div class="courses__group">
+                    <time class="courses__date">Dec 2017 - Ongoing</time>
+                    <h3 class="terciary-heading terciary-heading--white u-margin-bottom-xsmall courses__type">Advanced CSS and SASS
+                        <!-- <small>by Jonas Schmedtmann</small> -->
+                    </h3>
+                    <a href="https://www.udemy.com/advanced-css-and-sass/" target="_blank" class="courses__school">Udemy.com</a>
+
+                </div>
+
+                <div class="courses__group">
+                    <time class="courses__date">Dec 2017 - Jan 2018</time>
+                    <h3 class="terciary-heading terciary-heading--white u-margin-bottom-xsmall courses__type">Become a WordPress Developer
+                        <!-- <small>by Brad Schiff</small> -->
+                    </h3>
+                    <a href="https://www.udemy.com/become-a-wordpress-developer-php-javascript/" target="_blank" class="courses__school">Udemy.com</a>
+
+                </div>
+
+                <div class="courses__group">
+                    <time class="courses__date">Jun 2017 - Aug 2017</time>
+                    <h3 class="terciary-heading terciary-heading--white u-margin-bottom-xsmall courses__type">JavaScript: Understanding the Weird Parts
+                        <!-- <small>by Anthony Alicea</small> -->
+                    </h3>
+                    <a href="https://www.udemy.com/understand-javascript/" target="_blank" class="courses__school">Udemy.com</a>
+
+                </div>
+            </main>
+
+        </section>
+
+        <section class="section-projects u-padding-bottom-big">
+
+            <div class="u-center-text ">
+                <h2 class="secondary-heading secondary-heading--blue u-margin-top-big u-margin-bottom-big"> Projects </h2>
+            </div>
+
+            <main class="projects">
+                <div class="projects__group">
+                    <figure class="projects__figure">
+                        <div class="projects__image-container">
+                            <img src="img/divorcenation.jpg" alt="Divorce Nation Project" class="projects__image">
+                        </div>
+                        <figcaption class="projects__text">
+                            <ul class="projects__list">
+                                <li class="projects__list-items">Created a static HTML/CSS template from scratch and converted it in dynamic Wordpress template.</li>
+                                <li class="projects__list-items">Used Advanced Custom Fields to create a better UX in WP Admin.</li>
+                                <li class="projects__list-items">Added a new Custom Post Type and designed its archive.php.</li>
+                                <li class="projects__list-items">Included front-end forms so subscribers can upload new blog posts as well as new custom post
+                                    type.
+                                </li>
+                                <li class="projects__list-items">
+                                    <b>Languages and Skills used:</b> HTML, CSS (Sass), PHP, WP Functions, WP Template Tags,
+                                    WP Custom Post Type, Advanced Custom Fields.
+                                </li>
+                            </ul>
+                        </figcaption>
+                        <figcaption class="projects__footer">
+                            <a href="https://divorcenation.net/" class="projects__link" target="_blank">Visit Website</a>
+                        </figcaption>
+                    </figure>
+
+                </div>
+                <div class="projects__group">
+                    <figure class="projects__figure">
+                        <div class="projects__image-container">
+                            <img src="img/tamarindoactive.jpg" alt="Tamarindo Active Project" class="projects__image">
+                        </div>
+                        <figcaption class="projects__text">
+                            <ul class="projects__list">
+                                <li class="projects__list-items">Installed and customized a Wordpress theme according to client requirements. </li>
+                                <li class="projects__list-items">Explored the code files to make some DOM elements tweak.</li>
+                                <li class="projects__list-items">Adapted the theme accordingly to its business and industry.</li>
+                                <li class="projects__list-items">Design and style using Visual Composer and Revolution Slider. </li>
+                                <li class="projects__list-items">
+                                    <b>Languages and Skills used:</b> HTML, CSS, PHP, Visual Composer, Revolution Slider.
+                                </li>
+                            </ul>
+                        </figcaption>
+                        <figcaption class="projects__footer">
+                            <a href="http://tamarindoactive.com/" class="projects__link" target="_blank">Visit Website</a>
+                        </figcaption>
+                    </figure>
+
+                </div>
+                <div class="projects__group">
+                    <figure class="projects__figure">
+                        <div class="projects__image-container">
+                            <img src="img/rosieinvestments.jpg" alt="Rosie Investiments Project" class="projects__image">
+                        </div>
+                        <figcaption class="projects__text">
+                            <ul class="projects__list">
+                                <li class="projects__list-items">Installed and customized a Wordpress using Visual Composer.</li>
+                                <li class="projects__list-items">Listen to client's business philosophy and specification to tweak the website accordingly.
+                                </li>
+                                <li class="projects__list-items">
+                                    <b>Languages and Skills used:</b> HTML, CSS, PHP, Visual Composer.</li>
+                            </ul>
+                        </figcaption>
+                        <figcaption class="projects__footer">
+                            <a href="http://www.rosiesinvestments.com/" class="projects__link" target="_blank">Visit Website</a>
+                        </figcaption>
+                    </figure>
+                </div>
+
+            </main>
 
         </section>
     </main>
